--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "inquirer": "^6.2.0",
         "lodash": "^4.17.11",
         "minimist": "^1.2.0",
-        "nodemailer": "^4.6.8"
+        "moment": "^2.22.2",
+        "nodemailer": "^4.6.8",
+        "nunjucks": "^3.1.3"
     }
 }
